added new layout 78(custom)

--- a/EFI/OC/Kexts/AppleALC.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/AppleALC.kext/Contents/Info.plist
@@ -2325,8 +2325,8 @@
 					<key>ConfigData</key>
 					<data>
 					ASccMAEnHQEBJx6gAScfkAFHHBABRx0BAUce
-					FwFHH5ABlxxwAZcdEAGXHoEBlx8EAhccIAIX
-					HRACFx4hAhcfBAFHDAI=
+					FwFHH5ABlxxwAZcdEAGXHoEBlx8CAhccIAIX
+					HRACFx4hAhcfAgFHDAI=
 					</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
